--- a/main.html
+++ b/main.html
@@ -10,7 +10,13 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<header>
+		<h1>Why I want to become a developer?</h1>
+	</header>
+	<section>
+		<p>Driven by an innate curiosity and a passion for problem-solving, I am excited to pivot from my non-IT background and embark on a career as a software developer. The prospect of crafting innovative solutions and making a tangible impact motivates me. Despite being a fresher, I am eager to blend my analytical skills with coding challenges, fostering continuous learning and growth. 
+		</p>
+	</section>
 </body>
 
 </html>
